# Create A Sample Project That Includes WeissEngine

file(GLOB_RECURSE WS_SAMPLE_H_CPP_FILES "${CMAKE_CURRENT_SOURCE_DIR}/WSSample/*.h"
                                        "${CMAKE_CURRENT_SOURCE_DIR}/WSSample/*.cpp")

ADD_EXECUTABLE(WeissSample "${WS_SAMPLE_H_CPP_FILES}")

# Set Target Propreties
SET_TARGET_PROPERTIES(WeissSample PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(WeissSample PROPERTIES VERSION ${PROJECT_VERSION})

# Link Dependencies
LINK_LIBRARIES(WeissSample "${Vulkan_LIBRARIES}")
LINK_LIBRARIES(WeissEngine "${X11_LIBRARIES}")

LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Include
TARGET_INCLUDE_DIRECTORIES(WeissSample PUBLIC "${Vulkan_INCLUDE_DIRS}" "${PROJECT_BINARY_DIR}/")
TARGET_INCLUDE_DIRECTORIES(WeissEngine PUBLIC "${X11_INCLUDE_DIRS}")